--- a/index.html
+++ b/index.html
@@ -27,21 +27,12 @@
       color: white;
       /*font-family: 'Lexend Deca', sans-serif;*/
     }
-
-    .attribution {
-      font-size: 0.75rem;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
   </style>
 </head>
 
 <body>
-  <div class="main-container">
-    <main>
+  <main>
+    <div class="main-container">
       <div>
         <picture class="image-style">
           <source srcset="images/image-header-desktop.jpg" media="(min-width:50rem)">
@@ -75,12 +66,12 @@
           </div>
         </div>
       </div>
-    </main>
-  </div>
+    </div>
+  </main>
 
   <footer class="attribution">
     <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Mazen Hassan</a>.</p>
+      Coded by <a href="https://github.com/Mazz100">Mazen Hassan</a>.</p>
   </footer>
 </body>
 
